# serializer version: 1
# name: test_entities[binary_sensor.qube_heat_pump-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'source_pump',
    'unique_id': '01JQUBEHEATPUMP00000000000-dout_srcpmp_val',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'keypad',
    'unique_id': '01JQUBEHEATPUMP00000000000-keybonoff',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_11-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_11',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'day_mode',
    'unique_id': '01JQUBEHEATPUMP00000000000-daynightmode',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_11-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_11',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_12-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_12',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'room_sensor_enabled',
    'unique_id': '01JQUBEHEATPUMP00000000000-roomprb_en',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_12-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_12',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_13-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_13',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'plant_sensor_enabled',
    'unique_id': '01JQUBEHEATPUMP00000000000-plantprb_en',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_13-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_13',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_14-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_14',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'buffer_sensor_enabled',
    'unique_id': '01JQUBEHEATPUMP00000000000-bufferprb_en',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_14-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_14',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_15-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_15',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dhw_controller_enabled',
    'unique_id': '01JQUBEHEATPUMP00000000000-en_dhwpid',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_15-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_15',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_16-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_16',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'plant_demand',
    'unique_id': '01JQUBEHEATPUMP00000000000-plantdemand',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_16-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_16',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_17-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_17',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'external_demand',
    'unique_id': '01JQUBEHEATPUMP00000000000-id_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_17-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_17',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_18-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_18',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'thermostat_demand',
    'unique_id': '01JQUBEHEATPUMP00000000000-thermostatdemand',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_18-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_18',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_19-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_19',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heat_demand',
    'unique_id': '01JQUBEHEATPUMP00000000000-bms_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_19-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_19',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'user_pump',
    'unique_id': '01JQUBEHEATPUMP00000000000-dout_usrpmp_val',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_20-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_20',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'summer_mode',
    'unique_id': '01JQUBEHEATPUMP00000000000-id_summerwinter',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_20-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_20',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_21-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_21',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'booster_security',
    'unique_id': '01JQUBEHEATPUMP00000000000-boostersecurity',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_21-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_21',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_22-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_22',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'source_flow',
    'unique_id': '01JQUBEHEATPUMP00000000000-srcflw',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_22-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_22',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_23-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_23',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'anti_legionella',
    'unique_id': '01JQUBEHEATPUMP00000000000-req_antileg_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_23-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_23',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_24-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_24',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pv_surplus',
    'unique_id': '01JQUBEHEATPUMP00000000000-surplus_pv',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_24-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_24',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'four_way_valve',
    'unique_id': '01JQUBEHEATPUMP00000000000-dout_fourwayvlv_val',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cooling_output',
    'unique_id': '01JQUBEHEATPUMP00000000000-dout_cooling_val',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'three_way_valve',
    'unique_id': '01JQUBEHEATPUMP00000000000-dout_threewayvlv_val',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'buffer_pump',
    'unique_id': '01JQUBEHEATPUMP00000000000-dout_bufferpmp_val',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heater_step_1',
    'unique_id': '01JQUBEHEATPUMP00000000000-dout_heaterstep1_val',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heater_step_2',
    'unique_id': '01JQUBEHEATPUMP00000000000-dout_heaterstep2_val',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heater_step_3',
    'unique_id': '01JQUBEHEATPUMP00000000000-dout_heaterstep3_val',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_anti_legionella_timeout-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_anti_legionella_timeout',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: Anti-legionella timeout',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: Anti-legionella timeout',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_antilegionella_timeout',
    'unique_id': '01JQUBEHEATPUMP00000000000-al_maxtime_antileg_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_anti_legionella_timeout-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: Anti-legionella timeout',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_anti_legionella_timeout',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_central_heating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_central_heating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: Central heating',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: Central heating',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_central_heating',
    'unique_id': '01JQUBEHEATPUMP00000000000-usralrms',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_central_heating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: Central heating',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_central_heating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_compressor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_compressor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: Compressor',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: Compressor',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_compressor',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarmmng_al_pwrplus',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_compressor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: Compressor',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_compressor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_cooling-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_cooling',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: Cooling',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: Cooling',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_cooling',
    'unique_id': '01JQUBEHEATPUMP00000000000-coolingalrms',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_cooling-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: Cooling',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_cooling',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_dewpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_dewpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: Dewpoint',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: Dewpoint',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_dewpoint',
    'unique_id': '01JQUBEHEATPUMP00000000000-al_dewpoint_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_dewpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: Dewpoint',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_dewpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_dhw_timeout-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_dhw_timeout',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: DHW timeout',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: DHW timeout',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_dhw_timeout',
    'unique_id': '01JQUBEHEATPUMP00000000000-al_maxtime_dhw_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_dhw_timeout-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: DHW timeout',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_dhw_timeout',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_flow-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_flow',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: Flow',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: Flow',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_flow',
    'unique_id': '01JQUBEHEATPUMP00000000000-alrm_flw',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_flow-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: Flow',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_flow',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_global-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_global',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: Global',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: Global',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_global',
    'unique_id': '01JQUBEHEATPUMP00000000000-glbal',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_global-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: Global',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_global',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_heating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_heating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: Heating',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: Heating',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_heating',
    'unique_id': '01JQUBEHEATPUMP00000000000-heatingalrms',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_heating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: Heating',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_heating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_source-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_source',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: Source',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: Source',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_source',
    'unique_id': '01JQUBEHEATPUMP00000000000-srsalrm',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_source-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: Source',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_source',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_supply_too_hot-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_supply_too_hot',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: Supply too hot',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: Supply too hot',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_supply_too_hot',
    'unique_id': '01JQUBEHEATPUMP00000000000-al_underfloorsafety_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_supply_too_hot-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: Supply too hot',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_supply_too_hot',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_working_hours-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_working_hours',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm: Working hours',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Alarm: Working hours',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_working_hours',
    'unique_id': '01JQUBEHEATPUMP00000000000-alarmmng_al_workinghour',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_alarm_working_hours-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Qube heat pump Alarm: Working hours',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_alarm_working_hours',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_dewpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.qube_heat_pump_dewpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dewpoint',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dewpoint',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dewpoint',
    'unique_id': '01JQUBEHEATPUMP00000000000-dewpoint',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.qube_heat_pump_dewpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Dewpoint',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.qube_heat_pump_dewpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
